[package]
name = "crypto_pals_rust"
version = "0.2.0"
authors = ["Greg Rubin <rubin@amazon.com>"]
edition = "2018"

[dependencies]
hex = "0.4.2"
base64 = "0.13.0"
lazy_static = "1.4.0"
anyhow = "1"
rand = {version = "0.8.0", features = ["getrandom"]}
rand_core = {version = "0.6.0", features = ["getrandom"]}
reqwest = { version = "0.11", features = ["blocking"] }
tiny_http = "0.8.0"
